--- a/package.json
+++ b/package.json
@@ -19,7 +19,14 @@
     "url": "https://github.com/bluehenry/cypress.demo/issues"
   },
   "homepage": "https://github.com/bluehenry/cypress.demo#readme",
-  "dependencies": {
-    "cypress": "^3.2.0"
+  "devDependencies": {
+    "cypress": "^3.3.0",
+    "cypress-image-snapshot": "^3.0.2",
+    "jest": "^23.6.0",
+    "mocha": "^5.2.0",
+    "mocha-multi-reporters": "^1.1.7",
+    "mochawesome": "^3.1.2",
+    "mochawesome-merge": "^1.0.7",
+    "mochawesome-report-generator": "^3.1.5"
   }
 }
